<resources>
    <string name="app_name">GitFlame</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_details">Details</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="sign_in_with_github">Sign In With GitHub</string>
    <string name="starred">starred</string>
    <string name="created_repo">created</string>
    <string name="commented_on_commit">commented on commit</string>
    <string name="followed">followed</string>
    <string name="forked">forked</string>
    <string name="created_gist">gist</string>
    <string name="gollum">wiki</string>
    <string name="commented_on_issue">commented on issue</string>
    <string name="created_issue">created an issue</string>
    <string name="member">Member</string>
    <string name="public_event">Open-sourced</string>
    <string name="pull_request">Pull Requests</string>
    <string name="pr_comment_review">Pull Request comment</string>
    <string name="pr_review_event">Pull Request</string>
    <string name="repo_event">Repository</string>
    <string name="pushed">pushed to</string>
    <string name="team_event">Team</string>
    <string name="deleted">deleted</string>
    <string name="released">released</string>
    <string name="organization_event">Organization</string>
    <string name="card_event">Card</string>
    <string name="project_event">Project</string>
    <string name="avatar_icon">This is the profile photo of event creator.</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="title">test</string>

    <string-array name="profile_tabs">
        <item>About</item>
        <item>Overview</item>
        <item>Repositories</item>
        <item>Activity</item>
        <item>Starred</item>
        <item>Gists</item>
    </string-array>

</resources>